# course_work

./: CMakeLists.txt  contestant.cpp  contestant.h  deepseek.cpp  deepseek.h  game.cpp  game.h  main.cpp  neuro.cpp  nn.cpp  nn.h  player.cpp  player.h  revolver.cpp  revolver.h  telegram.cpp  telegram.h  test.cpp  test_neuro.cpp  tgbottest.cpp
